# NURA_GCS_QT

./: BackendAPI.md  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  DataLogger.cpp  DataLogger.h
model/: CMakeLists.txt  DataFrame.h
parser/: CMakeLists.txt  IProtocolParser.h  RocketTelemetryParser.cpp  RocketTelemetryParser.h
replay/: CMakeLists.txt  ReplayStorage.cpp  ReplayStorage.h
simulator/: CMakeLists.txt  TelemetrySimulator.cpp  TelemetrySimulator.h
spec/: 00_system_rules.md  01_protocol.md  02_dataframe.md  03_logging_format.md  04_parser_rules.md  05_simulator.md  06_replay.md  07_task_flow.md  10_ui_architecture.md  11_app_controller.md  12_serial_controller.md  13_replay_controller.md  14_plot_panel.md  15_3d_view.md  16_orientation_panel.md  17_map_view.md
tests/: app_controller_test.cpp  parser_test.cpp  test_pipeline.cpp
ui/: AppController.cpp  AppController.h  CMakeLists.txt  ConsolePanel.cpp  ConsolePanel.h  MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h  OrientationPanel.cpp  OrientationPanel.h  PlotPanel.cpp  PlotPanel.h  ReplayController.cpp  ReplayController.h  SerialController.cpp  SerialController.h  StatusPanel.cpp  StatusPanel.h  View3D.cpp  View3D.h
